--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"husky": "^9.1.0",
-		"prettier": "^3.3.3"
+		"prettier": "^3.3.3",
+		"rollup": "^4.18.1"
 	}
 }
